# linux-patterns

./: .gitignore  README.md  install_odoo.sh  tunnel.sh
demo_age/: README.md  keypair.txt  more_secrets.json.age  passphrase_keypair.txt  passphrase_protected.json  plain_keypair.txt  secrets.enc.json  secrets.json  secrets.json.age
demo_bash_function_default_args/: demo.sh
demo_catecho/: command-liner.md
demo_coc_yaml/: README.md
demo_deb_package/: README.md  add_apt_repo.sh  example-pgp-key.batch  generate-release.sh  make_pgp_key.sh  pgp-key.private  pgp-key.public
demo_feature_engineering/: command-liner.md  cut_frequency.csv  cut_label.csv  cut_one-hot.csv
demo_git_hooks/: README.md
demo_git_pre-commit/: pre-commit
demo_gnuplot/: command-liner.md  demo.sh
demo_hot_reload/: Makefile  index.html  server.py
demo_makefile_function/: Makefile
demo_makefile_multiline_var/: Makefile
demo_migrate_lxc_container/: README.md
demo_netplan/: README.md
demo_plots/: command-liner.md  ecdfplot  kdeplot  pairplot  scatterplot
demo_proxy_postgres_through_openresty/: README.md
demo_qsv_dedup/: demo.sh
demo_qsv_diff/: demo.sh  ordered1.csv  ordered2.csv  small2.csv
demo_qsv_diff_dedup/: command-liner.md  diamonds2.csv  diamonds_deduped.csv  (+1 more)
demo_systemd_resilient/resilient/: README.md  build.sh  pyproject.toml  resilient-app.1  resilient-app.1.md  resilient-app.py  resilient-app.service  setup.cfg
demo_systemd_resilient/resilient/debian/: changelog  control  copyright  install  rules
demo_systemd_resilient/resilient/src/resilient/: app.py
(+64 files in other folders)
