[metadata]
name = resilient
version = 0.0.1
author = Zach Waite
author_email = zach@waiteperspectives.com
description = Demo service that is actually not resilient
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zachwaite/resilient
project_urls =
  Bug Tracker = https://github.com/zachwaite/resilient/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.10
install_requires =
  pydantic==2.10.5
  result==0.17.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  resilient-cli = resilient.app:main
